--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,10 +12,12 @@
 set -g default-terminal "screen-256color" # colors!
 setw -g xterm-keys on
 set -s escape-time 10                     # faster command sequences
-set -sg repeat-time 600                   # increase repeat timeout
+set -sg repeat-time 150                   # increase repeat timeout 重复按键的时间
 set -s focus-events on
 
 set -g prefix2 C-a                        # GNU-Screen compatible prefix
+set -g prefix C-a
+unbind C-b
 bind C-a send-prefix -2
 
 set -q -g status-utf8 on                  # expect UTF-8 (tmux < 2.2)
